backend/src/main/java/com/example/tutorApp/errors/WrongPasswordException.java
package com.example.tutorApp.errors;

public class WrongPasswordException extends RuntimeException {
    public WrongPasswordException() {
        super("Złe hasło");
    }
}
